Mostly responsive. Still need to work on icon size in smaller window sizes and images in products.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i>
       </div>
       <div id="social">
-        <a href="#"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
-        <a href="#"><i class="fa fa-codepen fa-3x" aria-hidden="true"></i></a>
-        <a href="#"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
+        <a href="https://github.com/jakeckhardt"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+        <a href="https://codepen.io/Jakeckhardt/"><i class="fa fa-codepen fa-3x" aria-hidden="true"></i></a>
+        <a href="https://www.linkedin.com/in/jake-eckhardt-62a7a882/"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
       </div>
     </div>
     <div id="fullpage">
@@ -25,7 +25,7 @@
       </div>
     	<div class="section" id="about">
         <div class="animate">
-          <h1 id="aboutHeader">About</h1>
+          <h1 id="aboutHeader" class="header">About</h1>
         </div>
         <p>I am a Tacoma based frontend-developer and designer who graduated
           from the first-ever Seattle LaunchCode LC101 class. I have a passion
@@ -35,7 +35,7 @@
       </div>
     	<div class="section" id="products">
         <div class="animate">
-          <h1 id="productsHeader">Products</h1>
+          <h1 id="productsHeader" class="header">Products</h1>
         </div>
         <div class="slide">
           <div class="projectContainer">
@@ -82,25 +82,17 @@
       </div>
     	<div class="section" id="contact">
         <div class="animate">
-          <h1 id="contactHeader">Contact</h1>
+          <h1 id="contactHeader" class="header">Contact</h1>
         </div>
         <div id="contactInfo">
           <div>
+            <h2>Jake Eckhardt</h2>
             <p>Phone</p>
             <h3>217.710.9937</h3>
             <p>Email</p>
             <h3>jake.c.eckhardt@gmail.com</h3>
-          </div>
-          <div>
-            <form action="action.php" method="post">
-              <label for="name">Name</label>
-              <input type="text" name="name"></input>
-              <label>Email</label>
-              <input type="text" name="email"></input>
-              <label>Message</label>
-              <textarea name="message"></textarea>
-              <button type="submit">Submit</button>
-            </form>
+            <p>Location</p>
+            <h3>Tacoma, Washington</h3>
           </div>
         </div>
       </div>
