Fixed the responsive photos problem

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
   <head>
     <title>Jake Eckhardt</title>
+    <meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.5/jquery.fullpage.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
   </head>
-  <body>
+  <body class="preload">
     <div id="nav">
       <div id="color-social">
         <i class="fa fa-github fa-3x" aria-hidden="true"></i>
